--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nextjs-notion-starter-kit",
   "version": "2.0.0",
   "private": true,
-  "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
-  "author": "Travis Fischer <travis@transitivebullsh.it>",
+  "description": "Website for Suresh Kumar Mukhiya",
+  "author": "Suresh Kumar Mukhiya <itsmeskm99@gmail.com>",
   "repository": "https://github.com/sureshHARDIYA/min-blog",
   "license": "MIT",
   "engines": {
