--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/no-non-null-assertion": 0,
     "@typescript-eslint/no-unused-vars": 2,
     "react/prop-types": 0,
-    "react/display-name": 0
+    "react/display-name": 0,
+    "react/jsx-no-target-blank": 0
   }
 }
