--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-notion-starter-kit",
-  "version": "2.0.0",
+  "name": "skmukhiya.com.np",
+  "version": "2.0.1",
   "private": true,
   "description": "Website for Suresh Kumar Mukhiya",
   "author": "Suresh Kumar Mukhiya <itsmeskm99@gmail.com>",
@@ -26,27 +26,27 @@
   },
   "dependencies": {
     "@fisch0920/use-dark-mode": "^2.4.0",
-    "@keyvhq/core": "^2.0.0",
-    "@keyvhq/redis": "^2.0.0",
+    "@keyvhq/core": "^2.1.11",
+    "@keyvhq/redis": "^2.1.11",
     "@react-icons/all-files": "^4.1.0",
     "@vercel/og": "^0.5.11",
-    "classnames": "^2.3.2",
+    "classnames": "^2.5.1",
     "date-fns": "^2.30.0",
     "expiry-map": "^2.0.0",
-    "fathom-client": "^3.5.0",
+    "fathom-client": "^3.7.2",
     "got": "^12.0.3",
     "isomorphic-unfetch": "^4.0.2",
-    "lqip-modern": "^2.0.0",
+    "lqip-modern": "^2.2.1",
     "next": "^13.4.19",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
     "notion-utils": "^6.16.0",
-    "p-map": "^5.3.0",
+    "p-map": "^5.5.0",
     "p-memoize": "^6.0.1",
     "posthog-js": "^1.20.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-notion-x": "^6.15.6",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
@@ -62,8 +62,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.2",
     "typescript": "^4.9.5"
