--- a/package.json
+++ b/package.json
@@ -24,53 +24,52 @@
     "test:lint": "eslint '**/*.{ts,tsx}'",
     "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check"
   },
-  "dependencies": {
-    "@fisch0920/use-dark-mode": "^2.4.0",
-    "@keyvhq/core": "^2.1.11",
-    "@keyvhq/redis": "^2.1.11",
+  "dependencies": {  "@fisch0920/use-dark-mode": "^2.4.0",
+    "@keyvhq/core": "^1.6.9",
+    "@keyvhq/redis": "^1.6.10",
     "@react-icons/all-files": "^4.1.0",
-    "@vercel/og": "^0.5.11",
     "classnames": "^2.5.1",
-    "date-fns": "^2.30.0",
     "expiry-map": "^2.0.0",
-    "fathom-client": "^3.7.2",
-    "got": "^12.0.3",
-    "isomorphic-unfetch": "^4.0.2",
+    "fathom-client": "^3.4.1",
+    "ky": "^1.8.1",
     "lqip-modern": "^2.2.1",
-    "next": "^13.4.19",
-    "notion-client": "^6.16.0",
-    "notion-types": "^6.16.0",
-    "notion-utils": "^6.16.0",
-    "p-map": "^5.5.0",
-    "p-memoize": "^6.0.1",
-    "posthog-js": "^1.20.2",
-    "react": "^18.3.1",
+    "next": "^15.5.3",
+    "notion-client": "^7.7.0",
+    "notion-types": "^7.7.0",
+    "notion-utils": "^7.7.0",
+    "p-map": "^7.0.3",
+    "p-memoize": "^7.1.1",
+    "posthog-js": "^1.249.4",
+    "prismjs": "^1.30.0",
+    "react": "^19.1.1",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^18.3.1",
-    "react-notion-x": "^6.15.6",
-    "react-tweet-embed": "^2.0.0",
-    "react-use": "^17.3.2",
+    "react-dom": "^19.1.1",
+    "react-notion-x": "^7.7.0",
+    "react-tweet": "^3.2.2",
+    "react-use": "^17.6.0",
     "rss": "^1.2.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.3.1",
-    "@trivago/prettier-plugin-sort-imports": "^3.3.1",
-    "@types/node": "^18.8.5",
-    "@types/react": "^18.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.2",
-    "typescript": "^4.9.5"
+    "@fisch0920/config": "^1.2.1",
+    "@next/bundle-analyzer": "^15.3.3",
+    "@types/node": "^24.5.2",
+    "@types/prismjs": "^1.26.5",
+    "@types/react": "^19.1.13",
+    "@types/react-body-classname": "^1.1.10",
+    "@types/rss": "^0.0.32",
+    "cross-env": "^10.0.0",
+    "eslint": "^9.35.0",
+    "npm-run-all2": "^8.0.4",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   },
   "overrides": {
     "cacheable-request": {
       "keyv": "npm:@keyvhq/core@~1.6.6"
     }
+  },
+  "prettier": "@fisch0920/config/prettier",
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   }
 }
