--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Suresh Kumar Mukhiya <itsmeskm99@gmail.com>",
   "repository": "https://github.com/sureshHARDIYA/min-blog",
   "license": "MIT",
+  "packageManager": "pnpm@10.11.1",
   "engines": {
     "node": ">=18"
   },
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
